Remove changelog file in favor of subcommand and never bind mount /etc/passwd
Also clarify changelog diff mode output

--- a/app/subcommands/changelog
+++ b/app/subcommands/changelog
@@ -10,5 +10,9 @@ set -euf
 # If a revision is not given the initial commit is used as the floor
 rev="${1:-2cd1ee8}"
 
+[ -z "${1:-}" ] || inform '↓ Previous version'
+
 # shellcheck disable=SC2039
 echo -e "$(tac /LOG | sed "/$rev/q" | tac)"
+
+[ -z "${1:-}" ] || inform '↑ New version'
