--- a/app/subcommands/changelog
+++ b/app/subcommands/changelog
@@ -4,8 +4,8 @@
 # vim: ft=sh ts=4 sw=4 sts=4 noet
 set -euf
 
-# shellcheck disable=SC1091
-. ./lib/output.sh
+# shellcheck disable=SC1090
+. "$DAB/lib/output.sh"
 
 # If a revision is not given the initial commit is used as the floor
 rev="${1:-2cd1ee8}"
