--- a/app/subcommands/changelog
+++ b/app/subcommands/changelog
@@ -12,6 +12,6 @@ rev="${1:-2cd1ee8}"
 
 [ -z "${1:-}" ] || inform '↓ Previous version'
 
-printf '%b' "$(tac /LOG | sed "/$rev/q" | tac)"
+printf '%b\n' "$(tac /LOG | sed "/$rev/q" | tac)"
 
 [ -z "${1:-}" ] || inform '↑ New version'
